[tool.poetry]
name = "pyreversi"
version = "0.2.3"
description = ""
authors = ["Kimiaki Kinugasa <kimiakikinugasa@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
pytest-sugar = "*"
mypy = "*"
tox = "*"
lxml = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
coverage-badge = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules --cov=pyreversi"
xfail_strict = true
testpaths = [
    "tests"
]

# Black compatible configurations
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"

# Black compatible configurations
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.format]
max-line-length = "88"

## mypy supports pyproject.toml
## https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
## https://mypy.readthedocs.io/en/stable/config_file.html
namespace_packages = true

## Disallow dynamic typing
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

## Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

## None and Optional handlng
no_implicit_optional = true
strict_optional = true

## Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

## Suppressing errors
ignore_errors = true

## Miscellaneous strictness flags
allow_untyped_globals = true
allow_redefinition = false
local_partial_types = true
# disable_error_codex =
implicit_reexport = false
strict_equality = true

## Configuring error messages
# show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true
# show_absolute_path = true

## Miscellaneous
warn_unused_configs = true

## https://numpy.org/doc/stable/reference/typing.html
plugins = "numpy.typing.mypy_plugin"
